--- a/colab_modular_distance_estimation_V3.ipynb
+++ b/colab_modular_distance_estimation_V3.ipynb
@@ -27,20 +27,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "90a10a7a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "90a10a7a",
-        "outputId": "655f582a-8197-43a6-86fc-844216e996b9"
+        "outputId": "d4cc0dfc-aa6d-444a-b85f-31cc1cca1659"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Mounted at /content/drive\n",
             "ROOT = /content/drive/MyDrive/Colab Notebooks/distance_estimation_v3\n",
             "✅ sys.path actualizado con /content/drive/MyDrive/Colab Notebooks/distance_estimation_v3\n"
           ]
@@ -79,12 +80,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "57f1a6b7",
       "metadata": {
-        "id": "57f1a6b7"
+        "id": "57f1a6b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a4c5f593-74d6-47cf-9044-aa5d9246163a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Módulos escritos en: /content/drive/MyDrive/Colab Notebooks/distance_estimation_v3\n"
+          ]
+        }
+      ],
       "source": [
         "# === Writer: save modules as .py files inside ROOT ===\n",
         "from pathlib import Path\n",
@@ -483,12 +496,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "ed74d15e",
       "metadata": {
-        "id": "ed74d15e"
+        "id": "ed74d15e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ca435575-480f-45d4-b92e-ea8f904eddf2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.2 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.2/2.2 MB\u001b[0m \u001b[31m87.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/802.3 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m802.3/802.3 kB\u001b[0m \u001b[31m58.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.7/125.7 kB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m133.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m110.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m60.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m46.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m20.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m188.7/188.7 MB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m114.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m983.0/983.0 kB\u001b[0m \u001b[31m69.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# === 2) Required dependencies ===\n",
@@ -507,12 +547,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "abf2a0de",
       "metadata": {
-        "id": "abf2a0de"
+        "id": "abf2a0de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e335d263-967d-4802-b69d-d10a22997ca7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Config OK → /content/drive/MyDrive/Colab Notebooks/distance_estimation_v3\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "from pathlib import Path\n",
@@ -552,12 +604,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "3531686a",
       "metadata": {
-        "id": "3531686a"
+        "id": "3531686a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "58458f87-1a3d-452e-fab4-209f6b227b81"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "data.py OK\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# data.py\n",
@@ -647,7 +711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "aae29f69",
       "metadata": {
         "id": "aae29f69"
@@ -712,12 +776,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "dd404b46",
       "metadata": {
-        "id": "dd404b46"
+        "id": "dd404b46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b5e5c68c-ebb4-4925-cf2e-a63657a3b7b1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "utils.metrics OK\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# utils/metrics.py\n",
@@ -737,12 +813,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "6359292c",
       "metadata": {
-        "id": "6359292c"
+        "id": "6359292c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "902c9049-a508-43df-af85-222f60df3352"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "utils.guards OK\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# utils/guards.py\n",
@@ -809,12 +897,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "88dc31e5",
       "metadata": {
-        "id": "88dc31e5"
+        "id": "88dc31e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed4b587a-4334-46c7-ed32-e42c9d4cbc9a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "train.py OK\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# train.py\n",
@@ -876,12 +976,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "56a30f01",
       "metadata": {
-        "id": "56a30f01"
+        "id": "56a30f01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e9320d33-0e2f-476e-c080-04d741dd0c49"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "eval.py OK\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# eval.py\n",
@@ -930,12 +1042,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "30e5c6be",
       "metadata": {
-        "id": "30e5c6be"
+        "id": "30e5c6be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c205642d-07fb-4579-a6cd-03492c6b4cc2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "predict.py OK\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# predict.py\n",
@@ -966,47 +1090,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "a3eb7ed2",
       "metadata": {
-        "id": "a3eb7ed2"
+        "id": "a3eb7ed2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2848c865-65a0-4285-a520-57f6c9a38b8b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "main.py OK\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
         "# main.py\n",
-        "import argparse, glob\n",
+        "import sys\n",
+        "import argparse\n",
         "from pathlib import Path\n",
         "from train import train_all\n",
         "from eval import evaluate_holdout\n",
         "from config import PATHS\n",
         "\n",
-        "def parse_args():\n",
-        "    ap = argparse.ArgumentParser()\n",
+        "def parse_args(argv=None):\n",
+        "    \"\"\"\n",
+        "    Use parse_known_args to ignore Jupyter/Colab injected args (e.g. -f kernel.json).\n",
+        "    \"\"\"\n",
+        "    ap = argparse.ArgumentParser(\n",
+        "        description=\"Distance Estimation — FULL + CROPPED + Guards + Hold-out\"\n",
+        "    )\n",
         "    ap.add_argument(\"--train\", action=\"store_true\", help=\"Train FULL ensemble + CROPPED\")\n",
         "    ap.add_argument(\"--eval\",  action=\"store_true\", help=\"Evaluate on hold-out with blending\")\n",
         "    ap.add_argument(\"--alpha\", type=float, default=0.5, help=\"Blending weight for CROPPED\")\n",
         "    ap.add_argument(\"--force\", action=\"store_true\", help=\"Override training guards\")\n",
-        "    return ap.parse_args()\n",
         "\n",
-        "def main():\n",
-        "    args = parse_args()\n",
+        "    # IMPORTANT: tolerate unknown args from Jupyter/Colab\n",
+        "    args, _unknown = ap.parse_known_args(argv)\n",
+        "    return args\n",
+        "\n",
+        "def discover_checkpoints():\n",
+        "    \"\"\"\n",
+        "    Discover checkpoints if we didn't train in this run.\n",
+        "    Returns:\n",
+        "        ck_full (list[Path]): ALL full_* checkpoints (sorted).\n",
+        "        ck_crop (Path|None):  First crop_* checkpoint or None.\n",
+        "    \"\"\"\n",
+        "    ckpt_dir = Path(PATHS[\"ckpt_dir\"])\n",
+        "    ck_full = sorted(ckpt_dir.glob(\"full_*.ckpt\"))\n",
+        "    ck_crop = next(iter(sorted(ckpt_dir.glob(\"crop_*.ckpt\"))), None)\n",
+        "    return ck_full, ck_crop\n",
+        "\n",
+        "def main(argv=None):\n",
+        "    args = parse_args(argv)\n",
+        "\n",
         "    if args.train:\n",
         "        ck_full, ck_crop = train_all(force=args.force)\n",
         "    else:\n",
-        "        # Descubrir checkpoints si no se entrena en este run\n",
-        "        ck_full = sorted(Path(PATHS[\"ckpt_dir\"]).glob(\"full_*.ckpt\"))\n",
-        "        ck_crop = next(iter(sorted(Path(PATHS[\"ckpt_dir\"]).glob(\"crop_*.ckpt\"))), None)\n",
+        "        # Discover checkpoints if not training in this run\n",
+        "        ck_full, ck_crop = discover_checkpoints()\n",
         "\n",
         "    if args.eval:\n",
         "        if not ck_full or ck_crop is None:\n",
-        "            print(\"No hay checkpoints. Ejecuta --train o coloca .ckpt en PATHS['ckpt_dir'].\")\n",
+        "            print(\"No checkpoints found. Run with --train or place .ckpt files in PATHS['ckpt_dir'].\")\n",
         "        else:\n",
         "            evaluate_holdout(ck_full, ck_crop, alpha=args.alpha)\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    main()\n",
-        "print(\"main.py OK\")\n"
+        "    # Pass only user args so parse_known_args can swallow Jupyter's -f\n",
+        "    main(sys.argv[1:])\n",
+        "\n",
+        "print(\"main.py OK\")\n",
+        "\n"
       ]
     },
     {
@@ -1164,40 +1323,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "a32d6530",
       "metadata": {
-        "id": "a32d6530",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 384
-        },
-        "outputId": "5d3b4650-b781-442f-8f7c-11b5f1ae9c8b"
+        "id": "a32d6530"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'config'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2378849190.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpathlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPATHS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmath\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msqrt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'config'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "# === 7B) Histogram de |error| (single chart) ===\n",
